<resources>
    <string name="clock">Time</string>
    <string name="compass">Compass</string>
    <string name="gps_location">Location</string>
    <string name="level">Level</string>
    <string name="settings">Settings</string>
    <string name="clock_info">Time Information</string>
    <string name="compass_info">Compass Information</string>
    <string name="gps_info">GPS Information</string>
    <string name="local_time">Local Time</string>
    <string name="utc_time">UTC Time</string>
    <string name="sun_position">Sun Position</string>
    <string name="sun_time">Sun Time</string>
    <string name="twilight">Twilight</string>
    <string name="moon_position">Moon Position</string>
    <string name="moon_time">Moon Time</string>
    <string name="moon_illumination">Moon Illumination</string>
    <string name="moon_dates">Moon Dates</string>
    <string name="gps_provider">Provider</string>
    <string name="gps_movement">Movement</string>
    <string name="gps_coordinates">Coordinates</string>
    <string name="gps_address">Address</string>
    <string name="compass_accuracy">Accuracy</string>
    <string name="compass_field">Magnetic Field</string>
    <string name="local_timezone">Timezone:</string>
    <string name="local_time_24hr">Time 24Hr:</string>
    <string name="local_time_12hr">Time 12Hr:</string>
    <string name="local_day">Day:</string>
    <string name="local_date">Date:</string>
    <string name="local_day_of_year">Day of Year:</string>
    <string name="local_week_of_year">Week of Year:</string>
    <string name="utc_local_time_offset">Local Time Offset:</string>
    <string name="utc_current_time">Time:</string>
    <string name="sun_azimuth">Azimuth:</string>
    <string name="sun_distance">Distance:</string>
    <string name="sun_altitude">Altitude:</string>
    <string name="sun_sunrise">Sunrise:</string>
    <string name="sun_noon">Noon:</string>
    <string name="sun_sunset">Sunset:</string>
    <string name="sun_nadir">Nadir:</string>
    <string name="twilight_astronomical_dawn">Astronomical Dawn:</string>
    <string name="twilight_nautical_dawn">Nautical Dawn:</string>
    <string name="twilight_civil_dawn">Civil Dawn:</string>
    <string name="twilight_civil_dusk">Civil Dusk:</string>
    <string name="twilight_nautical_dusk">Nautical Dusk:</string>
    <string name="twilight_astronomical_dusk">Astronomical Dusk:</string>
    <string name="moon_parallactic_angle">Parallactic Angle:</string>
    <string name="moon_moonrise">Moonrise:</string>
    <string name="moon_moonset">Moonset:</string>
    <string name="moon_fraction">Fraction:</string>
    <string name="moon_angle">Angle:</string>
    <string name="moon_angle_state">Angle State:</string>
    <string name="moon_phase">Phase:</string>
    <string name="moon_phase_angle">Phase Angle:</string>
    <string name="moon_full_moon">Full Moon:</string>
    <string name="moon_new_moon">New Moon:</string>
    <string name="moon_first_quarter">First Quarter:</string>
    <string name="moon_last_quarter">Last Quarter:</string>
    <string name="magnetometer">Magnetometer</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="accelerometer_accuracy">Accelerometer:</string>
    <string name="magnetometer_accuracy">Magnetometer:</string>
    <string name="compass_inclination">Inclination:</string>
    <string name="compass_declination">Declination:</string>
    <string name="compass_field_strength">Field Strength:</string>
    <string name="gps_status">Status:</string>
    <string name="gps_source">Source:</string>
    <string name="gps_accuracy">Accuracy:</string>
    <string name="gps_altitude">Altitude:</string>
    <string name="gps_latency">Latency:</string>
    <string name="gps_bearing">Bearing:</string>
    <string name="gps_displacement">Displacement:</string>
    <string name="gps_direction">Direction:</string>
    <string name="gps_speed">Speed:</string>
    <string name="gps_latitude">Latitude:</string>
    <string name="gps_longitude">Longitude:</string>
    <string name="sensor_accuracy_unreliable">Unreliable</string>
    <string name="sensor_accuracy_low">Low</string>
    <string name="sensor_accuracy_medium">Medium</string>
    <string name="sensor_accuracy_high">High</string>
    <string name="gps_enabled">Enabled</string>
    <string name="gps_disabled">Disabled</string>
    <string name="meter">m</string>
    <string name="kilometer">km</string>
    <string name="feet">ft</string>
    <string name="miles">miles</string>
    <string name="kilometer_hour">km/h</string>
    <string name="miles_hour">mph</string>
    <string name="milliseconds">ms</string>
    <string name="seconds">s</string>
    <string name="info_copied">Copied to Clipboard</string>
    <string name="info_error">Info couldn\'t be copied!!</string>
    <string name="invalid_coordinates">Invalid Coordinates</string>
    <string name="internet_connection_alert">Internet connection not available</string>
    <string name="error">Error</string>
    <string name="not_available">N/A</string>
    <string name="no_address_found">No address found for current location</string>
    <string name="location_saved">Saved Successfully</string>
    <string name="location_not_saved">Could not be saved!</string>
    <string name="no_update">No Update Available</string>
    <string name="location_not_available">Location is not yet available</string>
    <string name="appearance">Appearance</string>
    <string name="configuration">Configuration</string>
    <string name="about">About</string>
    <string name="contribute">Contribute</string>
    <string name="theme">Theme</string>
    <string name="icon">Icon</string>
    <string name="corner_radius">Corner Radius</string>
    <string name="units">Units</string>
    <string name="location_provider">Location Provider</string>
    <string name="language">Language</string>
    <string name="skip_splash_screen">Skip Splash Screen</string>
    <string name="specified_location">Use Specified Location</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="legal_notes">Legal Notes</string>
    <string name="app_version">App Version</string>
    <string name="found_an_issue">Found an issue?</string>
    <string name="translate">Translation</string>
    <string name="theme_follow_system">Follow System</string>
    <string name="theme_day">Light</string>
    <string name="theme_night">Dark</string>
    <string name="theme_auto">Auto (Day/Night)</string>
    <string name="desc_skip_splash_Screen">Skip splash screen when app launches and go to main screen directly</string>
    <string name="desc_specified_location">Specify custom Latitude and Longitude and use it to fetch information. Any information that only uses GPS will stay unaffected</string>
    <string name="desc_screen_on">Prevents the device from sleeping while the app is visible</string>
    <string name="desc_legal">Read app\'s Disclaimer, Privacy Policy and Terms of Use</string>
    <string name="desc_git">Open app\'s repository</string>
    <string name="desc_translate">Help translating the app in your native language</string>
    <string name="needles">Needle</string>
    <string name="motion_type">Motion Type</string>
    <string name="time_format">Use 12 Hour Format</string>
    <string name="motion_type_smooth">Smooth</string>
    <string name="motion_type_tick">Tick</string>
    <string name="bloom">Bloom</string>
    <string name="bloom_skins">Bloom Skins</string>
    <string name="show_code">Show Code</string>
    <string name="labels">Labels</string>
    <string name="buildings">Buildings</string>
    <string name="traffic">Traffic</string>
    <string name="satellite_mode">Satellite Mode</string>
    <string name="high_contrast_mode">High Contrast Map</string>
    <string name="unit_metric">Metric</string>
    <string name="unit_imperial">Imperial</string>
    <string name="specified_hint_header">Enter Location Data</string>
    <string name="specified_hint_latitude">Latitude (±90)</string>
    <string name="specified_hint_longitude">Longitude (±180)</string>
    <string name="compass_calibration_notice">If your device compass sensor accuracy is low, move your device in figure eight direction to calibrate the sensors.</string>
    <string name="specified_location_notice">Information shown below are being updated for specified location coordinates.</string>
    <string name="show_again">Show Again</string>
    <string name="search_timezone">Search Timezones</string>
    <string name="verifying_license">Verifying License</string>
    <string name="license_successful">Successful :)</string>
    <string name="license_failed">License Verification Failed</string>
    <string name="auto_system_default_language">Auto (System Default)</string>
    <string name="location_permission_denied">"Location Permission Denied!"</string>
    <string name="no_location_permission_alert">Some features may not work without location permission</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_set">Set</string>
    <string name="button_close">Close</string>
    <string name="button_grant">Grant</string>
    <string name="button_reset">Reset</string>
    <string name="clock_options">Clock Menu</string>
    <string name="compass_options">Compass Menu</string>
    <string name="gps_options">GPS Menu</string>
    <string name="gps_reset_location">Reset location</string>
    <string name="delete_all">Delete all</string>
    <string name="open_specified_location_documentation">Open specified location documentation</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="permissions">Permissions</string>
    <string name="credits">Credits</string>
    <string name="internet_uses">Internet Uses</string>
    <string name="waning">Waning</string>
    <string name="waning_gibbous">Waning Gibbous</string>
    <string name="waning_crescent">Waning Crescent</string>
    <string name="waxing">Waxing</string>
    <string name="waxing_gibbous">Waxing Gibbous</string>
    <string name="waxing_crescent">Waxing Crescent</string>
    <string name="full_moon">Full Moon</string>
    <string name="new_moon">New Moon</string>
    <string name="third_quarter">Third Quarter</string>
    <string name="first_quarter">First Quarter</string>
    <string name="north">North</string>
    <string name="north_west">North West</string>
    <string name="west">West</string>
    <string name="south_west">South West</string>
    <string name="south">South</string>
    <string name="south_east">South East</string>
    <string name="east">East</string>
    <string name="north_east">North East</string>
    <string name="north_N">N</string>
    <string name="north_west_NW">NW</string>
    <string name="west_W">W</string>
    <string name="south_west_SW">SW</string>
    <string name="south_S">S</string>
    <string name="south_east_SE">SE</string>
    <string name="east_E">E</string>
    <string name="north_east_NE">NE</string>
    <string name="location_details">Location Details</string>
    <string name="min">Min:</string>
    <string name="max">Max:</string>
    <string name="avg">Avg:</string>
    <string name="utm_zone">Zone:</string>
    <string name="utm_easting">Easting:</string>
    <string name="help">Help</string>
    <string name="save">Save</string>
    <string name="set_and_save">Set and Save</string>
    <string name="set_only">Set Only</string>
    <string name="desc_custom_coord_dialog">These parameters are currently being used for calculating information.</string>
    <string name="note">Note</string>
    <string name="enter_marker_name">Enter Marker Name</string>
    <string name="target">Target</string>
    <string name="share">Share</string>
    <string name="measure">Measure</string>
    <string name="name">Name</string>
</resources>