<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/options_container_horizontal_padding">

    <app.simple.positional.decorations.corners.DynamicCornerLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mainBackground"
        android:orientation="vertical"
        android:padding="@dimen/options_container_horizontal_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/options_container_horizontal_padding"
            android:fontFamily="@font/regular"
            android:text="@string/desc_custom_coord_dialog"
            android:textColor="@color/textTertiary"
            android:textSize="@dimen/options_item_text_size"
            app:drawableStartCompat="@drawable/ic_place_custom" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginVertical="10dp"
            android:background="@color/dividerColor" />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/regular"
            android:text="@string/gps_latitude"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/info_text_secondary_size" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/regular"
            android:text="@string/gps_longitude"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/info_text_secondary_size" />

        <TextView
            android:id="@+id/timezone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/regular"
            android:text="@string/local_timezone"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/info_text_secondary_size" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/gps_address"
            android:textColor="@color/textSecondary"
            android:textSize="@dimen/info_text_secondary_size" />

        <app.simple.positional.decorations.ripple.DynamicRippleButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:textColor="?attr/colorAppAccent"
            android:fontFamily="@font/bold"
            android:text="@string/share" />

    </app.simple.positional.decorations.corners.DynamicCornerLinearLayout>

</FrameLayout>
