<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/direction_list_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:backgroundTint="@color/toolbarBackground"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:fadingEdge="vertical"
    android:fadingEdgeLength="50dp"
    android:orientation="vertical"
    android:overScrollMode="always"
    android:paddingHorizontal="10dp"
    android:requiresFadingEdge="vertical"
    app:roundTopCorners="true"
    tools:parentTag="android.widget.LinearLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@style/PrimaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/gps_location"
            android:textSize="@dimen/info_text_primary_size" />

        <TextView
            android:id="@+id/direction_target"
            style="@style/SecondaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/info_text_item_margin_horizontal"
            android:layout_marginVertical="@dimen/info_text_item_margin_vertical"
            android:maxLines="1"
            android:text="@string/target"
            android:textSize="@dimen/info_text_secondary_size" />

        <TextView
            android:id="@+id/direction_bearing"
            style="@style/SecondaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/info_text_item_margin_horizontal"
            android:layout_marginVertical="@dimen/info_text_item_margin_vertical"
            android:maxLines="1"
            android:text="@string/gps_bearing"
            android:textSize="@dimen/info_text_secondary_size" />

        <TextView
            android:id="@+id/direction_displacement"
            style="@style/SecondaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/info_text_item_margin_horizontal"
            android:layout_marginTop="@dimen/info_text_item_margin_vertical"
            android:maxLines="1"
            android:text="@string/gps_displacement"
            android:textSize="@dimen/info_text_secondary_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@style/PrimaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/gps_coordinates"
            android:textSize="@dimen/info_text_primary_size" />

        <TextView
            android:id="@+id/direction_latitude"
            style="@style/SecondaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/info_text_item_margin_horizontal"
            android:layout_marginVertical="@dimen/info_text_item_margin_vertical"
            android:maxLines="1"
            android:text="@string/target"
            android:textSize="@dimen/info_text_secondary_size" />

        <TextView
            android:id="@+id/direction_longitude"
            style="@style/SecondaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/info_text_item_margin_horizontal"
            android:layout_marginVertical="@dimen/info_text_item_margin_vertical"
            android:maxLines="1"
            android:text="@string/gps_bearing"
            android:textSize="@dimen/info_text_secondary_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@style/PrimaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/compass"
            android:textSize="@dimen/info_text_primary_size" />

        <TextView
            android:id="@+id/direction_compass_azimuth"
            style="@style/SecondaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/info_text_item_margin_horizontal"
            android:layout_marginVertical="@dimen/info_text_item_margin_vertical"
            android:maxLines="1"
            android:text="@string/moon_azimuth"
            android:textSize="@dimen/info_text_secondary_size" />

    </LinearLayout>
</merge>
