<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/mainBackground"
    android:elevation="10dp"
    android:orientation="horizontal"
    android:padding="8dp"
    tools:parentTag="app.simple.positional.decorations.corners.DynamicCornerLinearLayout">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:layout_marginHorizontal="8dp"
        android:fontFamily="@font/heading"
        android:text="@string/measure"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/top_bar_text_size"
        android:textStyle="bold" />

    <app.simple.positional.decorations.ripple.DynamicRippleImageButton
        android:id="@+id/add"
        android:layout_width="@dimen/app_button_size"
        android:layout_height="@dimen/app_button_size"
        android:layout_gravity="center_vertical|end"
        android:layout_marginStart="8dp"
        android:background="@drawable/ripple_btn"
        android:contentDescription="@string/gps_reset_location"
        android:src="@drawable/ic_add"
        android:tint="@color/iconColor" />

    <app.simple.positional.decorations.ripple.DynamicRippleImageButton
        android:id="@+id/measures"
        android:layout_width="@dimen/app_button_size"
        android:layout_height="@dimen/app_button_size"
        android:layout_gravity="center_vertical|end"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/ripple_btn"
        android:contentDescription="@string/gps_reset_location"
        android:src="@drawable/ic_square_foot"
        android:tint="@color/iconColor" />

    <app.simple.positional.decorations.ripple.DynamicRippleImageButton
        android:id="@+id/menu"
        android:layout_width="@dimen/app_button_size"
        android:layout_height="@dimen/app_button_size"
        android:layout_gravity="center_vertical|end"
        android:background="@drawable/ripple_btn"
        android:contentDescription="@string/gps_options"
        android:src="@drawable/ic_menu"
        android:tint="@color/iconColor" />

</merge>
